dark mode fixes for chromium browsers

--- a/start/static/start/css/jazzmin.css
+++ b/start/static/start/css/jazzmin.css
@@ -27,3 +27,12 @@
 .gap-2 {
   gap: 2rem !important;
 }
+
+.bg-body-tertiary {
+    background-color: #4d4d4d !important;
+}
+
+.breadcrumb {
+    padding-left: 5px!important;
+    padding-right: 5px!important;
+}
